Added Pagination + UI Improvement + new fonts + Icons

--- a/src/assets/styles/_fonts.scss
+++ b/src/assets/styles/_fonts.scss
@@ -50,6 +50,50 @@
     font-style: normal;
 }
 
+/* = Roboto Serif
+=============================================*/
+@font-face {
+    font-family: 'Roboto-Serif';
+    src: url('/assets/fonts/robotoslab-regular-webfont.woff') format('woff'),
+    url('/assets/fonts/robotoslab-regular-webfont.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'Roboto-Serif';
+    src: url('/assets/fonts/robotoslab-bold-webfont.woff') format('woff'),
+    url('/assets/fonts/robotoslab-bold-webfont.woff2') format('woff2');
+    font-weight: bold;
+    font-style: normal;
+}
+
+/* = PT Serif
+=============================================*/
+@font-face {
+    font-family: 'PT-Serif';
+    src: url('/assets/fonts/pt_serif-web-regular-webfont.woff') format('woff'),
+    url('/assets/fonts/pt_serif-web-regular-webfont.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'PT-Serif';
+    src: url('/assets/fonts/pt_serif-web-bold-webfont.woff') format('woff'),
+    url('/assets/fonts/pt_serif-web-bold-webfont.woff2') format('woff2');
+    font-weight: bold;
+    font-style: normal;
+}
+
+/* = Slabo Serif
+=============================================*/
+@font-face {
+    font-family: 'Slabo';
+    src: url('/assets/fonts/slabo27px-regular-webfont.woff') format('woff'),
+    url('/assets/fonts/slabo27px-regular-webfont.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+}
+
 
 /* = Bebas Neue
 =============================================*/
