--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -1,1 +1,5 @@
-$redColor: red;
+:root {
+    --sidebar-link-color: #555;
+    --sidebar-link-active: #111;
+    --light-gray-border: 1px solid #DDD;
+}
