--- a/src/templates/handlebars/tags.handlebars
+++ b/src/templates/handlebars/tags.handlebars
@@ -1,5 +1,6 @@
 <!-- START : Partial template for Tags -->
 {{#if tags}}
+<p class="tag-list__header"><strong>Tags</strong></p>
 <ul class="tag-list">
     {{#each tags}}
     <li class="tag-list__item">
