--- a/src/templates/handlebars/article.handlebars
+++ b/src/templates/handlebars/article.handlebars
@@ -15,38 +15,47 @@
 
     </header>
 
-    <nav class="tags-wrapper tags-wrapper--top">
+    <main class="wrapper">
+        <div class="container-fluid">
 
-    </nav>
+            <aside class="sidebar-panel">
+                <nav class="category-wrapper category-wrapper--aside">
 
-    <div class="wrapper">
-        <div class="container">
-            <section class="article">
+                </nav>
+                <nav class="tags-wrapper tags-wrapper--aside">
 
-                <header class="article__header">
-                    <h1>{{htmlWebpackPlugin.options.title}}</h1>
-                </header>
+                </nav>
+            </aside>
 
-                <article class="article__content">
-                    {{{htmlWebpackPlugin.options.bodyHTML}}}
-                </article>
+            <section class="content-wrapper">
 
-                <footer class="article__footer">
+                <section class="article">
 
-                </footer>
+                    <header class="article__header">
+                        <h1>{{htmlWebpackPlugin.options.title}}</h1>
+                    </header>
 
+                    <article class="article__content">
+                        {{{htmlWebpackPlugin.options.bodyHTML}}}
+                    </article>
+
+                    <footer class="article__footer">
+
+                    </footer>
+
+                </section>
             </section>
 
         </div>
-    </div>
+        </div>
 
-    {{{htmlWebpackPlugin.options.footer}}}
+        {{{htmlWebpackPlugin.options.footer}}}
 
-    <!--  Scroll to top -->
-    <a href="javascript:void(0);" id="scrollToTop" class="scroll-top">
-        <i class="icon-arrow-up">&#8593;</i>
-        <span class="sr-only">Scroll To Top</span>
-    </a>
+        <!--  Scroll to top -->
+        <a href="javascript:void(0);" id="scrollToTop" class="scroll-top">
+            <i class="icon-arrow-up">&#8593;</i>
+            <span class="sr-only">Scroll To Top</span>
+        </a>
 
 </body>
 
