--- a/src/templates/handlebars/header.handlebars
+++ b/src/templates/handlebars/header.handlebars
@@ -7,7 +7,7 @@
     <ul class="main-navigation">
         <li><a class="main-navigation__item" href="/">Our Work</a></li>
         <li><a class="main-navigation__item" href="/">Blog</a></li>
-        <li><a class="main-navigation__item" href="/">About Us</a></li>
+        <li><a class="main-navigation__item" href="javascript:void(0)" id="showGrid">About Us</a></li>
         <li><a class="main-navigation__item dropdown-toggle" href="javascript:void(0)" id="toggleTheme" data-toggle="dropdown"
                 aria-haspopup="true" aria-expanded="false">Toggle Theme</a>
             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
