--- a/src/templates/handlebars/html-to-markdown.handlebars
+++ b/src/templates/handlebars/html-to-markdown.handlebars
@@ -78,6 +78,12 @@
                                 <input type="text" class="form-control" name="txtCoverImage" id="txtCoverImage" placeholder="Image path...">
                             </div>
                         </div>
+                        <div class="col-12 col-md-6 col-sm-6">
+                            <div class="form-group">
+                                <label for="txtExcerpt">Excerpt</label>
+                                <input type="text" class="form-control" name="txtExcerpt" id="txtExcerpt" placeholder="Image path...">
+                            </div>
+                        </div>
                     </div>
 
                     <div class="row">
